<resources>
    <string name="app_name">IHC Admission Guide</string>

    <!-- <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     -->
    <string name="action_settings">Settings</string>

    <string name="menu_about_university">About University</string>
    <string name="menu_tips">Registration Tips</string>
    <string name="menu_guide">Sections Guide</string>
    <string name="menu_submit">Submitting a Section</string>
    <string name="menu_about">About</string>
    <string name="nav_header_desc">App Logo</string>
    <string name="extra">Extra</string>
    <string name="about_university"> كلية سودانية نشأت كمؤسسة الامام الهادي للدراسات الاسلامية في عام 1996م ثم تطور المعهد الي مركز الامام الهادي للدراسات الاضافية وعلوم الحاسوب في عام 1999م .    \n ونسبة للاداء المتميز تم التصديق بقيام كلية الامام الهادي في م 28/5/2002 وتدار بعدد من الاكاديميين والتربويين من ذوي الخبرة والاختصاص في مجال التعليم العالي بوجه عام وفي مجال التعليم الاهلي علي وجه الخصوص. وتسعي المؤسسة جادة في ارساء قواعد اكاديمية متينة في مجال العلوم الإنسانية والتطبيقية واللغات وهدفها تقديم دراسة متميزة تعتمد علي تكامل العلوم والحوسبة ووسائل الاتصال الحديثة مما يجعل خريجيها متميزين عن غيرهم ومواكبين للطفرة العلمية الحديثة. وبما ان المؤسسة من اهدافها تفعيل برامج احتياجات البلاد لتكون مخرجاتها كوادر مؤهلة لخدمة انسان هذا الوطن وتتجاوز ذلك بالإسهام في البحث العلمي هيأت واعدت هذه البرامج ليكون الخريج إضافة حقيقية لخدمة البشرية في اصقاع المعمورة لذا بدات مسيرة عطائها علي التخطيط السليم وحسن إدارة الامكانيات المتوفرة.    \n  كلية الامام الهادي مؤسسة غير ربحية لذا تبؤات مكانا مرموقا بين رصيفاتها لسد الفجوة بين الممكن والمستحيل في مجال العلوم الحديثة.    \n   تضم الكلية العديد من التخصصات قسم البكالوريوس و قسم الدبلومات التقنية ثلاثه سنوات وقابله للتصعيد من هذه التخصصات    \n   \n   البكالوريوس\n   \n   بكالوريوس الشرف في المختبرات الطبية (5سنوات ). \nبكالوريوس الشرف في التغذية العلاجية (5سنوات ).\nبكالوريوس الطب البيطري (5سنوات).\nبكالوريوس علوم التمريض (4سنوات).\nبكالوريوس الشرف في العلوم الإدارية (قسم المحاسبة – قسم إدارة الأعمال – قسم إدارة الموارد البشرية – قسم إدارة التسويق ).\nبكالوريوس الشرف في الاقتصاد والدراسات المصرفية والمالية :(قسم الاقتصاد-قسم الدراسات المالية والمصرفية ).\nبكالوريوس الأداب : (اللغة الإنجليزية – علوم الإتصال – علم النفس ).\nبكالوريوس اللغة اللعربية والدراسات الإسلامية.\nبكالوريوس الشرف في علوم الحاسوب (شهادة علمية).\nبكالوريوس الشرف في تقانة المعلومات (شهادة علمية -شهادة أدبية ).\nبكالوريوس السياحة والفندقة :(قسم الفندقة -قسم السياحة ).\nبكالوريوس الشريعة والقانون .\n\nالدبلومات التقنية (نظام الثلاث سنوات/قابل للتصعيد)\n\nدبلوم الهندسة الكهربائية (الحائز على الرقم الهندسي):\nهندسة الاتصالات – قسم هندسة الالات والاجهزة .\nقسم هندسة الإلكترونيات (شهادة علمية ).\nدبلوم الإعلام والعلاقات العامة .\nدبلوم علم النفس ورياض الاطفال .\nدبلوم تقنية المعلومات المحاسبية .\nدبلوم صيانة الحاسوب (الحائز على الرقم الهندسي ).\nدبلوم تقنية شبكات الحاسوب .\nدبلوم تقنية المعلومات الإدارية .<b>كلية الامام الهادي</b></string>
    <string name="reg_tips"> \n\
الوثائق المطلوبة في علميه التسجيل   \n\
     \n   1.	كشف عن درجات الشهادة السودانية او مصدقة
       \n   2.	صورة من شهادة الميلاد و اللرقم الوطني او الجواز
         \n   3.	صورتين فتوغرافيا من الطلاب

\n\
        طريقة التسجيل \n\
    \n    1.	طلب اللاسنمارة من الشوؤن الكلية
     \n   2.	ملي اللاستمارة بالبيانات المطلوبه
      \n  3.	اتمام كل علميه التسجيل

        \n\
        الارشادات الهامة\n\
     \n  1.	مراجعة الموقع الخاص باداره الكليه لتعرف علي الشروط في القبول
      \n  2.	تسليم الوثائق المطلوبة و تعبئة طلب القبول
       \n  3.اصدار الهويه او البطاقة الخاصة بالكلية لسماح بالدخول
       \n  4.تقديم الوثائق المطلوبة الي المسجل المختص للاتمام علميه نظام التسجيل المحوسب

  </string>
    <string name="menu_notifications">Notifications</string>
    <string name="version">Version : </string>


</resources>
